# aeva2

./: .gitignore  PROGRESS.md  README.md
bridge-android/: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  PLAN.md  PROGRESS.md  README.md  SECURITY.md  SUMMARY_2026_05_11.md  pyproject.toml  requirements.txt  setup.py
bridge-android/contrib/: hermes-android-relay.service  hermes-relay-daemon.py
bridge-android/docs/: TESTING.md
bridge-android/docs/superpowers/plans/: 2026-04-09-hermes-android-review-fixes.md
bridge-android/hermes-android-bridge/: build.gradle.kts  gradlew  gradlew.bat  settings.gradle.kts
bridge-android/hermes-android-bridge/app/: build.gradle.kts
bridge-android/hermes-android-bridge/app/src/main/: AndroidManifest.xml
bridge-android/hermes-android-bridge/app/src/main/res/drawable/: bg_card_rounded.xml  bg_input_dark.xml
bridge-android/hermes-android-bridge/app/src/main/res/layout/: activity_main.xml
bridge-android/hermes-android-bridge/gradle/: libs.versions.toml
bridge-android/hermes-android-plugin/: __init__.py  android_relay.py  android_tool.py  plugin.yaml
bridge-android/scripts/: benchmark_llm.py  benchmark_llm.sh  build_apk.sh  build_local.sh  deploy_direct.sh  deploy_local.sh  install_remote.sh  local_relay_launcher.py  remote_relay_launcher.py  remote_scrcpy.sh  test_api.py  test_full_schema.py  test_llm.py  test_streaming.py  update_relay.sh
bridge-android/tests/: conftest.py  test_android_relay.py  test_android_tool.py
bridge-android/tools/: android_relay.py  android_tool.py
termux-agent/: .gitignore  CASES.md  (+34 more)
(+242 files in other folders)
