[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-android"
version = "0.3.0"
description = "Android device control toolset for hermes-agent"
requires-python = ">=3.11"
dependencies = ["requests>=2.28.0", "aiohttp>=3.9.0"]

[project.optional-dependencies]
dev = ["pytest", "pytest-mock", "responses"]
